--- a/OnLand/ControlLaptop/LocalStorage/ConfigStorage.json
+++ b/OnLand/ControlLaptop/LocalStorage/ConfigStorage.json
@@ -1,1 +1,1 @@
-{"telemetry_port": 7000, "command_port": 6000, "heartbeat_timeout": 5000, "pod_driver": "Simulation", "retrieval_timeout": 60000, "controlLaptopIpAddr": "192.168.0.2", "pod_address": "127.0.0.1"}
+{"telemetry_port": 7000, "controlLaptopIpAddr": "192.168.0.3", "command_port": 6000, "pod_driver": "Simulation", "heartbeat_timeout": 5000, "retrieval_timeout": 60000, "pod_address": "127.0.0.1"}
