--- a/OnLand/ControlLaptop/LocalStorage/ConfigStorage.json
+++ b/OnLand/ControlLaptop/LocalStorage/ConfigStorage.json
@@ -1,1 +1,1 @@
-{"telemetry_port": 7000, "controlLaptopIpAddr": "192.168.0.3", "command_port": 6000, "pod_driver": "Simulation", "heartbeat_timeout": 5000, "retrieval_timeout": 60000, "pod_address": "127.0.0.1"}
+{"retrieval_timeout": 60000, "command_port": 6000, "telemetry_port": 7000, "pod_driver": "Simulation", "controlLaptopIpAddr": "192.168.0.3", "pod_address": "127.0.0.1", "heartbeat_timeout": 5000}
